--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,128 @@
-@import '~bootstrap/scss/bootstrap'
+@import '~bootstrap/scss/bootstrap';
+
+body {
+    background-color: rgba(0, 0, 0,);
+    font-family: 'Libre Baskerville', serif;
+    color: #ffffff;
+}
+
+//style header 
+
+header {
+    height: 200px;
+    border-bottom: 1px solid white;
+    text-align: center;
+
+    h1 {
+        letter-spacing: 1rem;
+        padding: 45px 0 35px;
+    }
+
+    li {
+        list-style: none;
+        padding: 0 30px;
+        margin-bottom: 20px;
+
+        a {
+            text-decoration: none;
+            color: #ffffff;
+
+            &:hover {
+                font-style: italic;
+                color: #ffffff;
+            } 
+        }
+    }
+}
+
+//style home
+
+.home-title {
+    padding: 30px 45px; 
+
+    span {
+        font-size: 1rem;
+        top: -15px;
+    }
+}
+
+.home-title-description {
+    padding: 0 0 30px 45px;
+}
+
+
+//style carousel
+
+.carousel-item {
+    height: 100vh;
+}
+
+.carousel-item img {
+    object-fit: cover;
+}
+
+.carousel-caption {
+    top: 55%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.title {
+    font-size: 60px;
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, 0.3);
+}
+
+
+//style catalogue
+
+.catalogue-title {
+    padding: 40px 45px; 
+}
+
+.card {
+    background-color: transparent;
+    border-style: none;
+}
+
+.card-img-top img {
+    max-width: 100%;
+    padding: 15px 17px 30px 15px;
+}
+
+.card-text {
+    text-align: center;
+    padding-bottom: 15px;
+    line-height: 1.7;
+}
+
+.movie-title {
+    padding-bottom: 15px;
+    font-size: 1.3rem;
+}
+
+//style footer
+
+footer {
+    height: 90px;
+    border-top: 1px solid rgb(209, 209, 209);
+    margin-top: 60px;
+    padding: 30px 45px 0;
+    text-align: end;
+
+    i {
+        padding-left: 15px;
+
+        &:hover {
+            transform: scale(1.3);
+        }
+    }
+
+    a {
+        color: #ffffff;
+
+        &:hover {
+            color: #ffffff;
+        }
+    }
+}
