--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -53,12 +53,17 @@ header {
 
 //style carousel
 
+// #carouselExampleControls {
+//     height: 500px;
+// }
+
 .carousel-item {
-    height: 100vh;
+    height: 500px;
 }
 
-.carousel-item img {
-    object-fit: cover;
+.slide-img {
+    max-height: 100%;
+    object-fit: contain;
 }
 
 .carousel-caption {
@@ -68,9 +73,8 @@ header {
 }
 
 .title {
-    font-size: 60px;
+    font-size: 50px;
     color: #ffffff;
-    background-color: rgba(0, 0, 0, 0.3);
 }
 
 
@@ -83,6 +87,10 @@ header {
 .card {
     background-color: transparent;
     border-style: none;
+
+    a {
+        color: #ffffff;
+    }
 }
 
 .card-img-top img {
@@ -99,6 +107,24 @@ header {
 .movie-title {
     padding-bottom: 15px;
     font-size: 1.3rem;
+}
+
+//style singlemovie 
+
+.container.single-movie {
+    height: 400px;
+    padding: 70px 0;
+    text-align: center;
+
+    h3{
+        padding-bottom: 30px;
+    }
+
+    p {
+        line-height: 2.3rem;
+    }
+
+
 }
 
 //style footer
